--- a/index.html
+++ b/index.html
@@ -108,18 +108,23 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Sathyabama University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2019</h6>
           <p>Bachelor of Engineering - Computer Science and Engineering</p>
+          <p> 8.5 CGPA </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Sri Chaitanya Junior College</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-          <p>Intermediate</p>
+          <p>HSC</p>
+          <p>91.1%</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Triveni Talent School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013</h6>
-          <p>SSC</p><br>
+          <p>SSC</p>
+          <p>8.8 CGPA</p>
+          <br>
+          
         </div>
        <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-folder-open fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects</h2>
