--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Python Programming</b></h5>
+          <h5 class="w3-opacity"><b>Python Programming 3</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2018 - August 2018</h6>
           <p>INTERNSHALA</p>
           <hr>
